# mitsuha

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  package-lock.json  rust-toolchain.toml
.azure/: pullrequest.pipeline.yml
.azure/variables/: common.variables.yml
.cargo/: .gitignore  config.toml
.github/workflows/: ci.yml
deploy/: configmap.mitsuha.yml  prometheus.yml  service.mitsuha.yml  service.prometheus.yml  statefulset.mitsuha.yml  tidbcluster.tikv-sq.yml  tidbcluster.tikv-store.yml
mitsuha-channel/: Cargo.toml
mitsuha-channel/benches/: setup.rs  wasmtime.rs
mitsuha-channel/src/: context.rs  delegator.rs  enforcer.rs  interceptor.rs  job_controller.rs  job_future.rs  labeled_storage.rs  labeled_storage_channel.rs  lib.rs  muxed_storage.rs  namespacer.rs  qflow.rs  scheduler.rs  simple.rs  system.rs  system_storage.rs  util.rs  wasmtime.rs
mitsuha-channel/tests/: labeled_storage.rs  setup.rs  wasmtime.rs
mitsuha-core/: Cargo.toml
mitsuha-core/src/: channel.rs  constants.rs  errors.rs  executor.rs  kernel.rs  lib.rs  linker.rs  logging.rs  metric.rs  module.rs  runtime.rs  selector.rs  storage.rs  symbol.rs  types.rs
mitsuha-core/src/config/: api.rs  client.rs  executor.rs  instance.rs  job.rs  mod.rs  persistence.rs  plugin.rs  provider.rs  storage.rs  telemetry.rs
mitsuha-core/src/job/: cost.rs  ctrl.rs  ctx.rs  mgr.rs  mod.rs
mitsuha-core/src/provider/: api.rs  mod.rs
mitsuha-core/src/resolver/: blob.rs  mod.rs  module.rs  redis.rs  wasm.rs
mitsuha-persistence/: Cargo.toml
mitsuha-persistence/migration/: Cargo.toml
mitsuha-persistence/migration/src/: lib.rs  m20240126_113029_create_mitsuha_scheduler_partition_table.rs  m20240126_114150_create_mitsuha_scheduler_job_queue_table.rs  m20240128_030024_create_mitsuha_scheduler_job_command_queue_table.rs  m20240216_022505_create_mitsuha_scheduler_partition_resource_table.rs  m20240312_024922_create_mitsuha_module_table.rs  main.rs
mitsuha-persistence/src/: lib.rs  module.rs  scheduler_job_command_queue.rs  scheduler_job_queue.rs  scheduler_partition.rs  scheduler_partition_resource.rs
mitsuha-policy-engine/: Cargo.toml
mitsuha-policy-engine/src/: engine.rs  lib.rs
mitsuha-qflow/: Cargo.toml
mitsuha-qflow/src/: consumer.rs  gate.rs  lib.rs  partition.rs  producer.rs  qmux.rs  util.rs
mitsuha-qflow/src/tikv/: constants.rs  mod.rs  muxer.rs  reader.rs  writer.rs
mitsuha-qflow/tests/: common.rs  proc.rs  qmux.rs  tikv.rs
mitsuha-runtime/: Cargo.toml  build.rs
mitsuha-runtime-rpc/: Cargo.toml
mitsuha-runtime-rpc/src/: lib.rs
mitsuha-runtime-rpc/src/model/: channel.rs
mitsuha-runtime-rpc/src/proto/: channel.proto  channel.rs
mitsuha-runtime-test/: Cargo.toml  Makefile
mitsuha-runtime-test/assets/: Makefile
mitsuha-runtime-test/assets/wasm/: Makefile
mitsuha-runtime-test/config/mitsuha_api/development/: development.toml
mitsuha-runtime-test/config/mitsuha_runtime/test/: default.toml  local.toml  test.toml
mitsuha-runtime-test/config/tikv-cluster/: pd.toml  tikv.toml
mitsuha-runtime-test/docker-compose/: development.yml  tikv-cluster.yml
mitsuha-runtime-test/mitsuha-service-main/: Cargo.toml
mitsuha-runtime-test/mitsuha-service-main/src/: main.rs
mitsuha-runtime-test/mitsuha-wasi-echo/: Cargo.toml  Makefile  musubi.json
mitsuha-runtime-test/mitsuha-wasi-echo/src/: main.rs
mitsuha-runtime-test/mitsuha-wasm-echo/: .gitconfig  Cargo.toml  Makefile  musubi.json
mitsuha-runtime-test/mitsuha-wasm-echo/src/: main.rs
mitsuha-runtime-test/mitsuha-wasm-loop/: Cargo.toml  Makefile  musubi.json
mitsuha-runtime-test/mitsuha-wasm-loop/src/: main.rs
mitsuha-runtime-test/mitsuha-wasm-main/: Cargo.toml  Makefile  musubi.json
mitsuha-runtime-test/mitsuha-wasm-main/src/: main.rs
mitsuha-runtime/src/: lib.rs  main.rs
mitsuha-runtime/src/http/: mod.rs  prometheus.rs
mitsuha-runtime/src/model/: channel.rs
mitsuha-runtime/src/plugin/: common.rs  delegator.rs  enforcer.rs  init.rs  interceptor.rs  mod.rs  muxed_storage.rs  namespacer.rs  one_storage.rs  qflow.rs  scheduler.rs  wasmtime.rs
mitsuha-runtime/src/proto/: channel.proto  channel.rs
mitsuha-runtime/src/rpc/: channel.rs  mod.rs
mitsuha-runtime/src/service/: channel.rs  mod.rs
mitsuha-runtime/src/telemetry/: mod.rs  otel.rs  stdout.rs
mitsuha-runtime/tests/: basic.rs
mitsuha-scheduler/: Cargo.toml
mitsuha-scheduler/src/: config.rs  constant.rs  lib.rs  metric.rs  scheduler.rs  util.rs
mitsuha-scheduler/src/job_command_queue/: mod.rs  repository.rs  service.rs
mitsuha-scheduler/src/job_queue/: mod.rs  repository.rs  service.rs
mitsuha-scheduler/src/partition/: mod.rs  repository.rs  service.rs
mitsuha-storage/: Cargo.toml
mitsuha-storage/benches/: memory_storage.rs
mitsuha-storage/src/: conf.rs  constants.rs  lib.rs  local.rs  localfs.rs  memory.rs  tikv.rs  unified.rs  util.rs
mitsuha-storage/src/metadata/: mod.rs
mitsuha-storage/src/resolver/: blob.rs
mitsuha-storage/tests/: fs.rs  local_storage.rs  memory_storage.rs  setup.rs  tikv_storage.rs  unified_storage_test.rs
mitsuha-wasm-runtime/: Cargo.toml
mitsuha-wasm-runtime/src/: constants.rs  lib.rs  wasmtime.rs
mitsuha-wasm-runtime/src/resolver/: artifact.rs  mod.rs  wasmtime.rs
mitsuha-wasm-runtime/src/wasmtime/: linker.rs  mod.rs
mitsuha-wasm-runtime/src/wasmtime/wasi/: dir.rs  file.rs  mod.rs
mitsuha-wasm-runtime/tests/: artifact.rs  wasmtime.rs
script/: docker-build.sh
