[package]
name = "mitsuha-channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mitsuha-core = { path = "../mitsuha-core" }
mitsuha-storage = { path = "../mitsuha-storage" }
mitsuha-wasm-runtime = { path = "../mitsuha-wasm-runtime" }

dashmap = "5.4.0"
tokio = { version = "1.24.1", features = ["full"] }
rand = "0.8.5"
async-trait = "0.1.59"
chrono = "0.4.23"
wasmtime = { version = "3.0.1", features = ["async"] }