[package]
name = "mitsuha-channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
musubi_api = "0.1.0"
mitsuha_core_types = "0.1.0"

mitsuha-core = { path = "../mitsuha-core" }
mitsuha-storage = { path = "../mitsuha-storage" }
mitsuha-wasm-runtime = { path = "../mitsuha-wasm-runtime" }
mitsuha-qflow = { path = "../mitsuha-qflow" }
mitsuha-runtime-rpc = { path = "../mitsuha-runtime-rpc" }
mitsuha-policy-engine = { path = "../mitsuha-policy-engine" }

dashmap = "5.4.0"
tokio = { version = "1.24.1", features = ["full"] }
rand = "0.8.5"
async-trait = "0.1.59"
chrono = "0.4.23"
wasmtime = { version = "12.0.0", features = ["async"] }
anyhow = "1.0.66"
futures = "0.3.28"
lazy_static = "1.4.0"
tracing = "0.1.37"
tonic = "0.9.2"
tonic-reflection = "0.9.2"
tonic-health = "0.9.2"
regex = "1.10.2"


[dev-dependencies]
# Musubi dependencies
musubi_wasmtime = "0.1.0"
criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }
env_logger = "0.10.0"


[[bench]]
name = "wasmtime"
harness = false