[package]
name = "mitsuha-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Musubi dependencies
musubi_api = { git = "https://github.com/supercmmetry/musubi", branch = "master" }

uuid = { version = "1.2.2", features = ["v4"] }
thiserror = "1.0.37"
anyhow = "1.0.66"
serde = "1.0.148"
serde_json = "1.0.89"
async-trait = "0.1.59"
config = "0.13.2"
reqwest = { version = "0.11.13", features = ["blocking"] }
redis = "0.22.1"
futures = "0.3"
tokio = { version = "1.24.1", features = ["full"] }
strum_macros = "0.24.3"
strum = "0.24"
dashmap = "5.4.0"
chrono = { version = "0.4.23", features = ["serde"] }
lazy_static = "1.4.0"
log4rs = { version = "1.2.0" }
log = "0.4.19"