[package]
name = "mitsuha-persistence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

mitsuha-core = { path = "../mitsuha-core" }
mitsuha-persistence-migration = { path = "migration" }

lazy_static = "1.4.0"
sea-orm = { version = "0.12.2", features = ["sqlx-mysql", "runtime-tokio-rustls", "with-chrono", "with-uuid", "macros"]}
sea-orm-migration = { version = "0.12.2", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
chrono = "0.4.26"
tokio = { version = "1.24.1", features = ["full"] }
serde = "1.0.148"
serde_json = "1.0.89"
log = "0.4.20"
