[package]
name = "mitsuha-policy-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mitsuha_core_types = "0.1.0"

mitsuha-core = { path = "../mitsuha-core" }

serde = "1.0.148"
serde_json = "1.0.89"
async-trait = "0.1.59"

[dev-dependencies]
tokio = { version = "1.24.1", features = ["full"] }
