[package]
name = "mitsuha-qflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
musubi_api = "0.1"

mitsuha_core_types = "0.1"
mitsuha_filesystem = "0.1"

mitsuha-core = { path = "../mitsuha-core" }

tonic = "0.9.2"
tonic-reflection = "0.9.2"
tonic-health = "0.9.2"
prost = "0.11.9"
prost-types = "0.11.9"
anyhow = "1.0.66"
chrono = "0.4.23"
env_logger = "0.10.0"
tokio = { version = "1.33.0", features = ["full"] }
async-trait = "0.1.59"
serde = "1.0.148"
serde_json = "1.0.89"
lazy_static = "1.4.0"
tikv-client = "0.2.0"
rand = "0.8.5"
tracing = "0.1.37"
strum_macros = "0.24.3"
strum = "0.24"


[dev-dependencies]
uuid = { version = "1.2.2", features = ["v4"] }
