[package]
name = "mitsuha-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
musubi_api = { git = "ssh://git@github.com/supercmmetry/musubi", branch = "master" }

mitsuha-core = { path = "../mitsuha-core" }
mitsuha-storage = { path = "../mitsuha-storage" }
mitsuha-channel = { path = "../mitsuha-channel" }
mitsuha-wasm-runtime = { path = "../mitsuha-wasm-runtime" }
mitsuha-qflow = { path = "../mitsuha-qflow" }

tonic = "0.9.2"
tonic-reflection = "0.9.2"
tonic-health = "0.9.2"
prost = "0.11.9"
prost-types = "0.11.9"
anyhow = "1.0.66"
chrono = "0.4.23"
env_logger = "0.10.0"
tokio = { version = "1.24.1", features = ["full"] }
async-trait = "0.1.59"
serde = "1.0.148"
serde_json = "1.0.89"
lazy_static = "1.4.0"



[build-dependencies]
tonic-build = "0.9.2"