[package]
name = "mitsuha-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mitsuha-core = { path = "../mitsuha-core" }

async-trait = "0.1.59"
strum_macros = "0.24.3"
strum = "0.24"
anyhow = "1.0.66"
chrono = "0.4.23"
serde = "1.0.148"
serde_json = "1.0.89"
dashmap = "5.4.0"
tokio = { version = "1.24.1", features = ["full"] }
moka = { version = "0.11", features = ["future"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }
rand = "0.8.5"

[[bench]]
name = "memory_storage"
harness = false