[package]
name = "mitsuha-wasm-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mitsuha-core = { path = "../mitsuha-core" }

# Musubi dependencies
musubi_api = { git = "https://github.com/supercmmetry/musubi", branch = "master" }
musubi_wasmtime = { git = "https://github.com/supercmmetry/musubi", branch = "master" }

lazy_static = "1.4.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
anyhow = "1.0.66"
wasmtime = "3.0.1"
wasmparser = "0.96.0"
async-trait = "0.1.59"
serde = "1.0.148"
serde_json = "1.0.89"
num-traits = "0.2.15"
tokio = { version = "1.23.0", features = ["full"] }
strum_macros = "0.24.3"
strum = "0.24"
