[package]
name = "mitsuha-wasm-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mitsuha-core = { path = "../mitsuha-core" }
mitsuha-storage = { path = "../mitsuha-storage" }

# Musubi dependencies
mitsuha_core_types = "0.1.15"
musubi_api = "0.1.15"
musubi_wasmtime = "0.1.15"
mitsuha_filesystem = "0.1.15"

lazy_static = "1.4.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
anyhow = "1.0.66"
wasmtime = { version = "19.0.0", features = ["async", "component-model", "runtime"] }
wasi-common = { version = "19.0.0", features = ["sync", "tokio"] }

wasmparser = "0.96.0"
async-trait = "0.1.59"
serde = "1.0.148"
serde_json = "1.0.89"
num-traits = "0.2.15"
tokio = { version = "1.24.1", features = ["full"] }
strum_macros = "0.24.3"
strum = "0.24"
futures = "0.3"
moka = { version = "0.11", features = ["future"] }
tracing = "0.1.37"
path-absolutize = "3.1.1"